@@ -286,10 +286,8 @@ public class AntBuilder extends Builder {
             if (isWindows) {
                 arguments.add("cmd.exe");
                 arguments.add("/C");
-                arguments.add(antScript);
-            } else {
-                arguments.add(antScript);
             }
+            arguments.add("\"" + antScript + "\"");
         } else {
             arguments.add("java");
             Iterator argsIterator = args.iterator();
